<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccc"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/imgIconApp"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_app"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name"
                    android:textColor="#000"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imgIconApp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgIconApp"
                    app:layout_constraintTop_toTopOf="@+id/imgIconApp" />

                <ImageView
                    android:id="@+id/imgVersion"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_home"
                    android:tint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgIconApp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/version"
                    android:textColor="#000"
                    app:layout_constraintBottom_toTopOf="@+id/tvVersionName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgVersion"
                    app:layout_constraintTop_toTopOf="@+id/imgVersion" />

                <TextView
                    android:id="@+id/tvVersionName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="2.1.5(1020)"
                    app:layout_constraintBottom_toBottomOf="@id/imgVersion"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvVersion"
                    app:layout_constraintTop_toBottomOf="@+id/tvVersion" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--Company-->
                <ImageView
                    android:id="@+id/imgCompany"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_home"
                    android:tint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAuthor"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/company"
                    android:textColor="#000"
                    app:layout_constraintBottom_toTopOf="@+id/tvCompanyName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgCompany"
                    app:layout_constraintTop_toTopOf="@+id/imgCompany" />

                <TextView
                    android:id="@+id/tvCompanyName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/company_name"
                    app:layout_constraintBottom_toBottomOf="@id/imgCompany"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvCompany"
                    app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

                <!--/Company-->

                <!--Email-->
                <ImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_home"
                    android:tint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgCompany"
                    app:layout_goneMarginTop="16dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/email"
                    android:textColor="#000"
                    app:layout_constraintBottom_toTopOf="@+id/tvEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgEmail"
                    app:layout_constraintTop_toTopOf="@+id/imgEmail" />

                <TextView
                    android:id="@+id/tvEmailAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    app:layout_constraintBottom_toBottomOf="@id/imgEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvEmail"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
                <!--/Email-->

                <!--Website-->
                <ImageView
                    android:id="@+id/imgWebsite"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_home"
                    android:tint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgEmail"
                    app:layout_goneMarginTop="16dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvWebsite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/website"
                    android:textColor="#000"
                    app:layout_constraintBottom_toTopOf="@+id/tvWebsiteAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgWebsite"
                    app:layout_constraintTop_toTopOf="@+id/imgWebsite" />

                <TextView
                    android:id="@+id/tvWebsiteAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/website_address"
                    app:layout_constraintBottom_toBottomOf="@id/imgWebsite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvWebsite"
                    app:layout_constraintTop_toBottomOf="@+id/tvWebsite" />
                <!--/Website-->

                <!--Contact-->
                <ImageView
                    android:id="@+id/imgContact"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_home"
                    android:tint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgWebsite"
                    app:layout_goneMarginTop="16dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvContact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/contact"
                    android:textColor="#000"
                    app:layout_constraintBottom_toTopOf="@+id/tvContactNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgContact"
                    app:layout_constraintTop_toTopOf="@+id/imgContact" />

                <TextView
                    android:id="@+id/tvContactNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_number"
                    app:layout_constraintBottom_toBottomOf="@id/imgContact"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvContact"
                    app:layout_constraintTop_toBottomOf="@+id/tvContact" />
                <!--/Contact-->
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="5dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAboutContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/aboutContent"
                    app:layout_constraintTop_toBottomOf="@id/tvAbout" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>